Changes related to Nav bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-<!--The content below is only a placeholder and can be replaced.-->
+<!-- Outermost HTML of the application -->
 <div>
+  <!-- Top Navigation Bar-->
   <nav-component></nav-component>
+  
+  <!-- Content View -->
   <content></content>
 </div>
