--- a/src/app/navbar/nav.component.html
+++ b/src/app/navbar/nav.component.html
@@ -1,7 +1,6 @@
 <!-- HTML for NavComponent -->
-<div class='navComponentOuterCls'>
-    <div>Home</div>
-    <div>Tab 1</div>
-    <div>Tab 2</div>
-    <div>Tab 3</div>
+<div class='navComponentOuterCls' >
+    <div *ngFor="let tab of tabArray" class={{tab.class}}>
+        {{tab.title}}
+    </div>
 </div>
